Transform original product into a M&P Presence Detector.

--- a/options.html
+++ b/options.html
@@ -1,7 +1,7 @@
 <!-- This is an options page for configuring MQTT2Chrome -->
 <html>
   <head>
-    <title>MQTT2Chrome Extension Options</title>
+    <title>M&P Presence Detector</title>
     <style>
       body {
         font-family: arial, helvetica, sans-serif;
@@ -38,9 +38,9 @@
         <img src="icon.png" alt="">
       </div>
       <div class="banner_right">
-        <h1>MQTT2Chrome Options</h1>
+        <h1>M&P Presence Detector Options</h1>
       </div>
-      <p>The extension connects to a MQTT broker (that has websockets enabled), subscribes to a topic and displays any received messages as Chrome notifications.</p>
+      <p>Displays the status light of the presence detector in the M&P office</p>
     </div>
 
     <div>
